final data added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="https://lipn.univ-paris13.fr/" class="logo">
+            <a href="https://www.uclouvain.be/en/research-institutes/lidam/core" class="logo">
               <strong>CORE - UCLouvain</strong><br />
               Center for Operations Research and Econometrics
             </a>
@@ -316,15 +316,15 @@
               <li class="fa-envelope-open">
                 <my-email
                   data-user="pisanu"
-                  data-domain="lipn.univ-paris13.fr"
+                  data-domain="uclouvain.be"
                   >@</my-email
                 >
               </li>
               <li class="fa-phone"></li>
               <li class="fa-home">
-                Institut Galilée, bureau B103<br />
-                99 av. Jean-Baptiste Clément<br />
-                93430 Villetaneuse, France
+                CORE - Office B117<br />
+                Voie du Roman Pays 34<br />
+                1348 Ottignies-Louvain-la-Neuve, Belgium
               </li>
             </ul>
           </section>
