--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           -->
           <section>
             <header class="major">
-              <h2 id="publications">Publications</h2>
+              <h2 id="publications"> Main publications</h2>
             </header>
 
             <!-- Publication 1-->
@@ -173,47 +173,7 @@
               </dd>
             </dl>
 
-            <!-- Publication 2
-            <dl>
-              <dt>
-                <h4>
-                  <a href="https://ieeexplore.ieee.org/document/10102037">
-                    Discovering Causal Rules in Knowledge Graphs using Graph
-                    Embeddings.
-                  </a>
-                </h4>
-              </dt>
-              <dd>
-                <p>
-                  Lucas Simonne, <u>Nathalie Pernelle</u>, Fatiha Saïs, Rallou
-                  Thomopoulos (<b>2022</b>)<br />
-                  <em>
-                    International Joint Conference on Web Intelligence and
-                    Intelligent Agent Technology, (WIC-WI-IAT)
-                  </em>
-                  <br />Niagara Falls, ON, Canada, November 17-20, p.856-867.
-                </p>
-              </dd>
-            </dl> -->
-
-            <!-- Publication 3-->
-            <!-- <dl>
-              <dt>
-                <h4>
-                  <a href="https://hal.inrae.fr/hal-02622809/document">
-                    BECKEY: Understanding, comparing and discovering keys of
-                    different semantics in knowledge bases
-                  </a>
-                </h4>
-              </dt>
-              <dd>
-                <p>
-                  Danai Symeonidou, Vincent Armant, <u>Nathalie Pernelle</u>
-                  (<b>2020</b>)
-                  <br />
-                  <em>Knowledge Based Systems</em>, vol 195, pp 105708
-                </p>
-              </dd> -->
+            
 
               <!-- More publications (DBLP or HAL) link -->
               <dt>
@@ -223,6 +183,86 @@
               </dt>
             </dl>
           </section>
+
+
+          <section>
+            <header class="major">
+              <h2 id="others"> Other publications</h2>
+            </header>
+
+            <!-- Publication 3-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://www.memsait.it/volumi/Volume-93-n2-3-2022/2022MmSAI..2-3...34I.pdf">
+                    The Extragalactic Population of Accreting Neutron Stars and the Ultraluminous X-ray Sources Paradigm: from ULTraS to PULSULTraS
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  GL Israel, A De Luca, M Bachetti, A Belfiore, P Esposito, M Imbrogno, A Miraval Zanon,<u>F Pisanu</u>, GA Rodríguez Castillo, R Salvaterra, A Tiengo, A Wolter, Ultras Team, Pulsultras Team
+                  (<b>2023</b>)<br />
+                  <em>
+                    Journal of the Italian Astronomical Society, (Fabrizio Serra Editore, 2022)
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+          <!--
+          -- Coming Soon --
+          -->
+          <section>
+            <header class="major">
+              <h2 id="submitted">Coming soon</h2>
+            </header>
+            
+            <!-- Coming soon 1-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295204/datastream/PDF_01/view">
+                    A horizon tour of box-total dual integrality
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Emiliano Lancini, <u>Francesco Pisanu</u>
+                  (<b>2025+</b>)<br />
+                  <em>
+                    Submitted on June 2025
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+            <!-- Coming soon 2-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295208/datastream/PDF_01/view">
+                    On strong integrality properties of the perfect matching polytope
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Roland Grappe, Mathieu Lacroix, <u>Francesco Pisanu</u>
+                  (<b>2025+</b>)<br />
+                  <em>
+                    Submitted on May 2025
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
 
           <!--
           -- TEACHING --
@@ -296,7 +336,9 @@
             <ul>
               <li><a href="index.html#">Home</a></li>
               <li><a href="index.html#research">Research</a></li>
-              <li><a href="index.html#publications">Publications</a></li>
+              <li><a href="index.html#publications">Main publications</a></li>
+              <li><a href="index.html#others">Other publications</a></li>
+              <li><a href="index.html#submitted">Coming soon</a></li>
               <li><a href="index.html#teaching">Teaching</a></li>
               <!-- POSSIBLE TRANSLATION MENUS
               <li class="language"><a href="index_fr.html">en français </a></li>
@@ -315,9 +357,9 @@
             <ul class="contact">
               <li class="fa-envelope-open">
                 <my-email
-                  data-user="pisanu"
+                  data-user="francesco.pisanu"
                   data-domain="uclouvain.be"
-                  >@</my-email
+                  >[at]</my-email
                 >
               </li>
               <li class="fa-phone"></li>
