added all publications

--- a/index.html
+++ b/index.html
@@ -190,7 +190,51 @@
               <h2 id="others"> Other publications</h2>
             </header>
 
-            <!-- Publication 3-->
+            <!-- Other Publication 1-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://joss.theoj.org/papers/10.21105/joss.07389.pdf">
+                    Stingray 2: A fast and modern Python library for spectral timing
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Matteo Bachetti, Daniela Huppenkothen, Abigail Stevens, John Swinbank, Guglielmo Mastroserio, Matteo Lucchini, Eleonora Veronica Lai, Johannes Buchner, Amogh Desai, Gaurav Joshi, <u>Francesco Pisanu</u>, Sri Guru Datta Pisupati, Swapnil Sharma, Mihir Tripathi, Dhruv Vats
+                  (<b>2024</b>)<br />
+                  <em>
+                    The Journal of Open Source Software, (2024)
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+            <!-- Other Publication 2-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://iris.unica.it/bitstream/11584/322847/4/Greco-Pisanu.pdf">
+                    Improvements on overdetermined problems associated to the p-Laplacian
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Antonio Greco, <u>F Pisanu</u>
+                  (<b>2022</b>)<br />
+                  <em>
+                    Mathematics in Engineering, 4(3): 1-14, (AIMS Press, 2022)
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+            <!-- Other Publication 3-->
             <dl>
               <dt>
                 <h4>
