--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </p>
               <p>
                 I have been teacher at the
-                <a href="https://galilee.univ-paris13.fr/">Institut Galilee</a>.
+                <a href="https://galilee.univ-paris13.fr/">Institut Galilee</a> during the A.Y. 2023/24, and at the <a href="https://iutv.univ-paris13.fr/formation-continue-formations/">IUT Villetaneuse</a> during the A.Y. 2021/22-2022/23.
               </p>
               <p>
                 PhD :
@@ -121,14 +121,16 @@
 
           <hr class="major" />
           <header class="major">
-            <h2 id="research">Research</h2>
+            <h2 id="research">Research interests</h2>
           </header>
           <div class="row 200%">
             <div class="6u 12u$(medium)">
               <!-- Left column -->
-              <h4>Polyhedral Structures</h4>
+              <h4>Integer programming, combinatorial optimizzation, computational complexity, and graph theory</h4>
               <p>
-                I am interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integer properties of polyhedra such as integer decomposition property and box-total dual integrality.
+                I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integer properties of polyhedra such as integer decomposition property and box-total dual integrality.
+                The vast majority of my results are on hardness proofs and involves several classical structures such as the stable sets, (perfect) matchings, edge coverings, and vertex covering.
+                During my post-doc at CORE I started working on network design problems specialized on hierarchical clustering.
               </p>
             </div>
             <div class="6u$ 12u(medium)">
