bio change error

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
               <!-- Left column -->
               <h4>Integer programming, combinatorial optimizzation, computational complexity, and graph theory</h4>
               <p>
-                I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integer properties of polyhedra such as integer decomposition property and box-total dual integrality.
-                The vast majority of my results are on hardness proofs and involves several classical structures such as the stable sets, (perfect) matchings, edge coverings, and vertex covering.
+                I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integrality properties of polyhedra such as integer decomposition property and box-total dual integrality.
+                The vast majority of my results are on complexity and involves several classical structures such as the stable sets, (perfect) matchings, edge coverings, and vertex covering.
                 During my post-doc at CORE I started working on network design problems specialized on hierarchical clustering.
               </p>
             </div>
