bio change F Pisanu to whole name

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
               <dd>
                 <p>
-                  Antonio Greco, <u>F Pisanu</u>
+                  Antonio Greco, <u>Francesco Pisanu</u>
                   (<b>2022</b>)<br />
                   <em>
                     Mathematics in Engineering, 4(3): 1-14, (AIMS Press, 2022)
@@ -248,7 +248,7 @@
 
               <dd>
                 <p>
-                  GL Israel, A De Luca, M Bachetti, A Belfiore, P Esposito, M Imbrogno, A Miraval Zanon,<u>F Pisanu</u>, GA Rodríguez Castillo, R Salvaterra, A Tiengo, A Wolter, Ultras Team, Pulsultras Team
+                  GL Israel, A De Luca, M Bachetti, A Belfiore, P Esposito, M Imbrogno, A Miraval Zanon, <u>Francesco Pisanu</u>, GA Rodríguez Castillo, R Salvaterra, A Tiengo, A Wolter, Ultras Team, Pulsultras Team
                   (<b>2022</b>)<br />
                   <em>
                     Journal of the Italian Astronomical Society, (Fabrizio Serra Editore, 2022)
