--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
 
           <footer id="footer">
             <p class="copyright">
+              The template credits goes to:
               LIPN —
               <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a><br />
               Design: <a href="https://html5up.net">HTML5 UP</a>
