added comment other pub

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           -->
           <section>
             <header class="major">
-              <h2 id="publications"> Main publications</h2>
+              <h2 id="publications"> Selected publications</h2>
             </header>
 
             <!-- Publication 1-->
@@ -191,7 +191,7 @@
             <header class="major">
               <h2 id="others"> Other publications</h2>
             </header>
-
+            <p>This section presents some publications related to different projects I had the opportunity to collaborate on in recent years, which fall outside the core of my research.</p>
             <!-- Other Publication 1-->
             <dl>
               <dt>
