--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="content">
               <header>
                 <h1>Francesco Pisanu</h1>
-                <p>PhD in Computer Science</p>
+                <p>Another mathematician with a PhD in Computer Science</p>
               </header>
               <p>
                 Researcher in Computer Science, member of the
