patch error bio

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                 <p>Another mathematician with a PhD in Computer Science</p>
               </header>
               <p>
-                Researcher in Computer Science, member of the
+                I am a potdoctoral fellow in Computer Science, member of the
                 <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> 
                 (Center for Operations Research and Econometrics), at the
                 <a href="https://www.uclouvain.be/en">Université Catholique de Louvain</a>
-                in France, where I moved from University of Sorbonne Paris Nord in Italy in 2020.
+                in Belgium, where I moved from University of Sorbonne Paris Nord in Italy in 2020.
               </p>
               <p>
                 I have been teacher at the
@@ -130,7 +130,7 @@
               <p>
                 I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integrality properties of polyhedra such as integer decomposition property and box-total dual integrality.
                 The vast majority of my results are on complexity and involves several classical structures such as the stable sets, (perfect) matchings, edge coverings, and vertex covering.
-                During my post-doc at CORE I started working on network design problems specialized on hierarchical clustering.
+                During my postdoc at <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> I started working on network design problems specialized on hierarchical clustering.
               </p>
             </div>
             <div class="6u$ 12u(medium)">
