another path bio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> 
                 (Center for Operations Research and Econometrics), at the
                 <a href="https://www.uclouvain.be/en">Université Catholique de Louvain</a>
-                in Belgium, where I moved from University of Sorbonne Paris Nord in Italy in 2020.
+                in Belgium, where I moved from University of Sorbonne Paris Nord in France in 2020.
               </p>
               <p>
                 I have been teacher at the
