--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>Another mathematician with a PhD in Computer Science</p>
               </header>
               <p>
-                I am a potdoctoral fellow in Computer Science, member of the
+                I am a potdoctoral fellow in Computer Science, member of
                 <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> 
                 (Center for Operations Research and Econometrics), at the
                 <a href="https://www.uclouvain.be/en">Université Catholique de Louvain</a>
