--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <div class="row 200%">
             <div class="6u 12u$(medium)">
               <!-- Left column -->
-              <h4>Institute Galilee</h4>
+              <h4>Institute Galilee (A.Y. 2023/24)</h4>
               <h5>
                 L0 
               </h5>
@@ -359,6 +359,17 @@
           </div>
         </div>
       </div>
+
+      <h4>IUT Villetaneuse (A.Y.s 2022/23 and 2021/22)</h4>
+              <h5>
+                BUT1 
+              </h5>
+              <ul>
+                <li>Qualité de developpement
+                </li>
+                <li>IHM
+                </li>
+              <h5>
 
       <!--
       -- SIDEBAR --
