added paper with Daniele

--- a/index.html
+++ b/index.html
@@ -258,12 +258,41 @@
               </dd>
             </dl>
 
+            <!--
+          -- Coming Soon --
+          -->
+          <section>
+            <header class="major">
+              <h2 id="submitted">In preparation</h2>
+            </header>
+            
+            <!-- Coming soon 1-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="these/Distance_methods_vs_Network_problems.pdf">
+                    On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Daniele Catanzaro, Gwenaël Joret, Brieuc Pierre, and <u>Francesco Pisanu</u>
+                  (<b>2025+</b>)<br />
+                  <em>
+                    The sumission is coming soon
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
           <!--
           -- Coming Soon --
           -->
           <section>
             <header class="major">
-              <h2 id="submitted">Coming soon</h2>
+              <h2 id="submitted">In preparation</h2>
             </header>
             
             <!-- Coming soon 1-->
@@ -396,7 +425,7 @@
               <li><a href="index.html#research">Research</a></li>
               <li><a href="index.html#publications">Main publications</a></li>
               <li><a href="index.html#others">Other publications</a></li>
-              <li><a href="index.html#submitted">Coming soon</a></li>
+              <li><a href="index.html#submitted">In preparation</a></li>
               <li><a href="index.html#teaching">Teaching</a></li>
               <!-- POSSIBLE TRANSLATION MENUS
               <li class="language"><a href="index_fr.html">en français </a></li>
