--- a/index.html
+++ b/index.html
@@ -49,36 +49,26 @@
             </a>
             <ul class="icons">
               <!-- Github icon -->
-              <!-- <li><a href="https://github.com/my_github_user_name/" class= -->
-              <!-- "icon fa-github" title="GitHub"><span class= -->
-              <!-- "label">GitHub</span></a></li> -->
+              <li><a href="https://github.com/francescopisanu91/" class="icon fa-github" title="If you are here you should already know it!">
+                <strong>GitHub</strong>
+                </a>
               <li>
                 <a
                   href="https://orcid.org/0000-0003-0799-5760"
                   class="icon fa-address-book"
                   title="Orcid"
-                >
-                  <span class="label">Orcid</span>
+                ><strong>Orcid</strong>
                 </a>
               </li>
               <li>
-                <!-- <a
-                  href="https://dblp.org/pid/55/2273.html"
+                 <a
+                  href="https://scholar.google.com/citations?user=DGE4lPYAAAAJ&hl"
                   class="icon fa-list"
-                  title="dblp"
-                > -->
-                  <!-- <span class="label">DBLPspan></span>
+                  title="Google Scholar">
+                   <strong>Google Scholar</strong>
                 </a>
-              </li>
+              </li> 
               <li>
-                <a
-                  href="https://hal.science/search/index/?q=*&authIdPerson_i=1213428"
-                  class="icon fa-flask"
-                  title="HAL CNRS"
-                >
-                  <span class="label">HAL CNRS</span> -->
-                </a>
-              </li>
             </ul>
           </header>
 
@@ -444,8 +434,8 @@
             <ul class="contact">
               <li class="fa-envelope-open">
                 <my-email
-                  data-user="francesco.pisanu"
-                  data-domain="uclouvain.be"
+                  data-user="francesco[dot]pisanu"
+                  data-domain="uclouvain[dot]be"
                   >[at]</my-email
                 >
               </li>
