--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
             <ul class="contact">
               <li class="fa-envelope-open">
                 <my-email
-                  data-user="francesco[dot]pisanu"
-                  data-domain="uclouvain[dot]be"
-                  >[at]</my-email
+                  data-user="francesco.pisanu"
+                  data-domain="uclouvain.be"
+                  >@</my-email
                 >
               </li>
               <li class="fa-phone"></li>
