--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </p>
               <p>
                 PhD :
-                <a href="these/these_pisanu.pdf">
+                <a href="thesis/these_pisanu.pdf">
                 <b>On box-total dual integrality and total equimodularity</b></a>, 
                 defended in 2023.
               </p>
@@ -260,7 +260,7 @@
             <dl>
               <dt>
                 <h4>
-                  <a href="these/Distance_methods_vs_Network_problems.pdf">
+                  <a href="publications/Distance_methods_vs_Network_problems.pdf">
                     On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
                   </a>
                 </h4>
