--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
             <dl>
               <dt>
                 <h4>
-                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295208/datastream/PDF_01/view">
+
+                  <a href="publications/strong_int_prop_pmp.pdf">
                     On strong integrality properties of the perfect matching polytope
                   </a>
                 </h4>
@@ -317,6 +318,9 @@
                   <em>
                     Submitted on May 2025
                   </em>
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295208/datastream/PDF_01/view">
+                    (Click here to access an older version)
+                  </a>
                   <br />
                 </p>
               </dd>
