removed phone bar

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                   >@</my-email
                 >
               </li>
-              <li class="fa-phone"></li>
+              <!-- <li class="fa-phone"></li> -->
               <li class="fa-home">
                 CORE - Office B117<br />
                 Voie du Roman Pays 34<br />
