--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
             </header>
             <ul>
               <li><a href="index.html#">Home</a></li>
-              <li><a href="index.html#research">Research</a></li>
-              <li><a href="index.html#publications">Main publications</a></li>
+              <li><a href="index.html#research">Research interests</a></li>
+              <li><a href="index.html#publications">Selected publications</a></li>
               <li><a href="index.html#others">Other publications</a></li>
               <li><a href="index.html#submitted">In preparation</a></li>
               <li><a href="index.html#teaching">Teaching</a></li>
