patch tipos and  columns

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="https://galilee.univ-paris13.fr/">Institut Galilee</a> during the A.Y. 2023/24, and at the <a href="https://iutv.univ-paris13.fr/formation-continue-formations/">IUT Villetaneuse</a> during the A.Y. 2021/22-2022/23.
               </p>
               <p>
-                PhD :
+                PhD thesis:
                 <a href="thesis/these_pisanu.pdf">
                 <b>On box-total dual integrality and total equimodularity</b></a>, 
                 defended in 2023.
@@ -114,7 +114,7 @@
             <h2 id="research">Research interests</h2>
           </header>
           <div class="row 200%">
-            <div class="6u 12u$(medium)">
+            <div class="12u 12u$(medium)">
               <!-- Left column -->
               <h4>Integer programming, combinatorial optimizzation, computational complexity, and graph theory</h4>
               <p>
@@ -124,14 +124,6 @@
               </p>
             </div>
             <div class="6u$ 12u(medium)">
-              <!-- Right column -->
-              <h4></h4>
-              <p>
-                
-              </p>
-              <h4>
-              </h4>
-              <p>
             </div>
           </div>
 
@@ -330,58 +322,47 @@
           -- TEACHING --
           -->
           <hr class="major" />
-          <header class="major">
-            <h2 id="teaching">Teaching</h2>
-          </header>
-          <div class="row 200%">
-            <div class="6u 12u$(medium)">
-              <!-- Left column -->
-              <h4>Institute Galilee (A.Y. 2023/24)</h4>
-              <h5>
-                L0 
-              </h5>
-              <ul>
-                <li>Programmation (PAM2)
-                </li>
-              </ul>
-              <h5>
-                L1 
-              </h5>
-              <ul>
-                <li>Programmation 1 (math)
-                </li>
-                <li>
-                  Programmation 2 (info)
-                </li>
-                <li>
-                  Informatique 1 (PC1)
-                </li>
-                <li>
-                  Informatique 2 (PC1)
-                </li>
+<header class="major">
+  <h2 id="teaching">Teaching</h2>
+</header>
 
-              </ul>
-            </div>
+<div class="row">
+  <!-- Colonna 1 -->
+  <div class="6u 12u$(medium)">
+    <h4>UCLouvain (A.Y. 2024/25)</h4>
+    <h5>L3</h5>
+    <ul>
+      <li>Production and Operations Management</li>
+    </ul>
+    <h4>Institute Galilée (A.Y. 2023/24)</h4>
+    <h5>L0</h5>
+    <ul>
+      <li>Programmation (PAM2)</li>
+    </ul>
+    <h5>L1</h5>
+    <ul>
+      <li>Programmation 1 (math)</li>
+      <li>Programmation 2 (info)</li>
+      <li>Informatique 1 (PC1)</li>
+      <li>Informatique 2 (PC1)</li>
+    </ul>
+    <h5>L2</h5>
+    <ul>
+      <li>Programmation orientée objet</li>
+    </ul>
+    
+  </div>
 
-            <div class="6u$ 12u(medium)">
-              <!-- Right column -->
-              <h5>L2</h5>
-              <ul>
-                <li>
-                  Programmation orientée objet
-                </li>
-              </ul>
-              <h4>IUT Villetaneuse (A.Y.s 2022/23 and 2021/22)</h4>
-              <h5>
-                BUT1 
-              </h5>
-              <ul>
-                  <li>Qualité de developpement
-                  </li>
-                  <li>IHM
-                  </li>
-              </ul>
-            </div>
+  <!-- Colonna 2 -->
+  <div class="6u$ 12u$(medium)">
+    <h4>IUT Villetaneuse (A.Y.s 2022/23 and 2021/22)</h4>
+    <h5>BUT1</h5>
+    <ul>
+      <li>Qualité de développement</li>
+      <li>IHM</li>
+    </ul>
+  </div>
+
           </div>
         </div>
       </div>
