--- a/index.html
+++ b/index.html
@@ -116,11 +116,39 @@
           <div class="row 200%">
             <div class="12u 12u$(medium)">
               <!-- Left column -->
-              <h4>Integer programming, combinatorial optimizzation, computational complexity, and graph theory</h4>
+              <p> keywords: <b>Integer programming, combinatorial optimizzation, computational complexity, and graph theory</b></p>
               <p>
-                I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integrality properties of polyhedra such as integer decomposition property and box-total dual integrality.
+                <!-- I am mostly interested in graph theory and polyhedral combinatorics. Most of my efforts are devoted to the study of strong integrality properties of polyhedra such as integer decomposition property and box-total dual integrality.
                 The vast majority of my results are on complexity and involves several classical structures such as the stable sets, (perfect) matchings, edge coverings, and vertex covering.
-                During my postdoc at <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> I started working on network design problems specialized on hierarchical clustering.
+                During my postdoc at <a href="https://www.uclouvain.be/en/research-institutes/lidam/core">CORE</a> I started working on network design problems specialized on hierarchical clustering. -->
+                <p>
+    I'm a mathematician with a passion for both the pure and applied sides of math. I like digging into the theory as well as exploit such a theory for solving real-world problems. My research is mostly centered around graph theory and polyhedral combinatorics — two worlds I find incredibly rich and deeply connected.
+  </p>
+
+  <p>
+    Most of my efforts go into understanding the deep structure of polyhedra that come up in discrete optimization. I’m especially interested in strong integrality properties, like the <em>integer decomposition property</em> (IDP) and <em>box-total dual integrality</em> (box-TDI). These might sound abstract, but they have very real implications for how we solve problems efficiently — or prove we can’t.
+  </p>
+
+  <p>
+    I also work on complexity theory. Many of my results are about figuring out how hard it is to solve certain optimization problems. The kind of structures I work with are the classics: stable sets, (perfect) matchings, edge covers, vertex covers... all the greatest hits from graph theory, but seen through the lens of polyhedra and integer programming.
+  </p>
+
+  <p>
+    During my postdoc at <a href="https://uclouvain.be/en/research-institutes/lidam/core">CORE</a> (UCLouvain), I also started working on network design problems, especially in the context of hierarchical clustering. That opened up new directions for me, where theoretical insights meet algorithmic needs in data science.
+  </p>
+
+  <p>Here’s a more structured line of my principal contributions:</p>
+  <ul>
+    <li><strong>Integer programming & polyhedral combinatorics:</strong> Studied integrality conditions like IDP and box-TDI, and how they relate to well-known combinatorial problems.</li>
+    <li><strong>Combinatorial optimization:</strong> Developed results around classic problems (stable sets, matchings, coverings) and how they behave under structural or degree constraints.</li>
+    <li><strong>Computational complexity:</strong> Proved hardness results and explored what makes a problem tractable or not, often via reductions and clever formulations.</li>
+    <li><strong>Graph theory:</strong> Worked on understanding how graph structure affects optimization and complexity, with connections to perfect graphs and decomposition methods.</li>
+    <li><strong>Applications & collaboration:</strong> I like teaming up with people who bring applications to the table — operations research, computer science, data clustering — and seeing how theory can help (or be challenged).</li>
+  </ul>
+
+  <p>
+    If there’s a red thread in what I do, it’s the belief that good theory should be elegant, but also grounded. Whether it’s a nice clean polyhedron or a messy real-world problem, I’m in — especially if there’s a mathematics involved.
+  </p>
               </p>
             </div>
             <div class="6u$ 12u(medium)">
