changing link pub pmp

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                   Daniele Catanzaro, Gwenaël Joret, Brieuc Pierre, and <u>Francesco Pisanu</u>
                   (<b>2025+</b>)<br />
                   <em>
-                    The sumission is coming soon
+                    Soon submitted
                   </em>
                   <br />
                 </p>
@@ -325,7 +325,7 @@
               <dt>
                 <h4>
 
-                  <a href="publications/strong_int_prop_pmp.pdf">
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295208/datastream/PDF_01/view">
                     On strong integrality properties of the perfect matching polytope
                   </a>
                 </h4>
@@ -338,9 +338,6 @@
                   <em>
                     Submitted on May 2025
                   </em>
-                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295208/datastream/PDF_01/view">
-                    (Click here to access an older version)
-                  </a>
                   <br />
                 </p>
               </dd>
