--- a/index.html
+++ b/index.html
@@ -280,6 +280,28 @@
             <dl>
               <dt>
                 <h4>
+                  <a href="publications/approximabilit_BMEP.pdf">
+                    On the Practical Approximability of an Inapproximable Problem
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  <u>Francesco Pisanu</u>
+                  (<b>2025+</b>)<br />
+                  <em>
+                    Soon submitted
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+            <!-- Coming soon 1-->
+            <dl>
+              <dt>
+                <h4>
                   <a href="publications/Distance_methods_vs_Network_problems.pdf">
                     On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
                   </a>
