added project CRS4

--- a/index.html
+++ b/index.html
@@ -365,6 +365,33 @@
               </dd>
             </dl>
 
+           <!--
+          -- Projects --
+          -->
+          <section>
+            <header class="major">
+              <h2 id="projects">Projects</h2>
+            </header>
+            
+            <!-- Project 1-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="projects/no2_concentration.pdf">
+                    Short-term prediction of NO2 concentration on ground-based weather sensors data in urban scale area with graph neural networks
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Carlo Milesi, <u>Francesco Pisanu</u>, and Carlino Casari
+                  (<b>2022-23</b>)<br />
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
           <!--
           -- TEACHING --
           -->
@@ -441,6 +468,7 @@
               <li><a href="index.html#publications">Selected publications</a></li>
               <li><a href="index.html#others">Other publications</a></li>
               <li><a href="index.html#submitted">In preparation</a></li>
+              <li><a href="index.html#projects">Projects</a></li>
               <li><a href="index.html#teaching">Teaching</a></li>
               <!-- POSSIBLE TRANSLATION MENUS
               <li class="language"><a href="index_fr.html">en français </a></li>
