corresponding update on the page

--- a/index.html
+++ b/index.html
@@ -280,15 +280,15 @@
             <dl>
               <dt>
                 <h4>
-                  <a href="publications/approximability_BMEP.pdf">
-                    On the Practical Approximability of an Inapproximable Problem
+                  <a href="publications/Distance_methods_vs_Network_problems.pdf">
+                    On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
                   </a>
                 </h4>
               </dt>
 
               <dd>
                 <p>
-                  <u>Francesco Pisanu</u>
+                  Daniele Catanzaro, Gwenaël Joret, Brieuc Pierre, and <u>Francesco Pisanu</u>
                   (<b>2025+</b>)<br />
                   <em>
                     Soon submitted
@@ -302,18 +302,18 @@
             <dl>
               <dt>
                 <h4>
-                  <a href="publications/Distance_methods_vs_Network_problems.pdf">
-                    On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
+                  <a href="publications/approximability_BMEP.pdf">
+                    A Note on the Approximability of the Balanced Minimum Evolution Problem
                   </a>
                 </h4>
               </dt>
 
               <dd>
                 <p>
-                  Daniele Catanzaro, Gwenaël Joret, Brieuc Pierre, and <u>Francesco Pisanu</u>
+                  Daniele Catanzaro, Raffaele Pesenti, <u>Francesco Pisanu</u>
                   (<b>2025+</b>)<br />
                   <em>
-                    Soon submitted
+                    Submitted on November 2025
                   </em>
                   <br />
                 </p>
@@ -335,7 +335,7 @@
                   Emiliano Lancini, <u>Francesco Pisanu</u>
                   (<b>2025+</b>)<br />
                   <em>
-                    Submitted on June 2025
+                    Submitted on July 2025
                   </em>
                   <br />
                 </p>
